# jaco_b

./: .gitignore  .gitmodules  README.md
image_converter/: CMakeLists.txt  package.xml
image_converter/include/image_converter/: draw.hpp  image_converter.hpp
image_converter/src/: draw.cpp  image_converter.cpp  mark_detection.cpp  tutorial.cpp
jacob_control/: CMakeLists.txt  package.xml
jacob_control/config/: j2n6s300_control.yaml  j2s6s300_control.yaml  jacob_control.yaml
jacob_control/include/jacob_control/: ObjectCreator.h  PlanningGroup.h  object_creator.h  planning_group.h
jacob_control/launch/: jacob_control.launch  mark_detection.launch  moveto.launch
jacob_control/src/: ObjectCreator.cpp  PlanningGroup.cpp  object_creator.cpp  planning_group.cpp
jacob_control/src/node/: mark_detection.cpp  moveto.cpp  robot_pose.cpp
jacob_description/: CMakeLists.txt  package.xml
jacob_description/meshes/: april_box.dae  tagged_box.dae  unshaddedtagged_box.dae  unshaddedtagged_box2.dae
jacob_description/sdf/: my_mesh.sdf
jacob_description/urdf/: april_box.urdf  box.urdf  j2n6s300_standalone.xacro  jacob.xacro  jacob_standalone.xacro  jcamera_standalone.xacro  kinova.gazebo  kinova_common.xacro  object.urdf  shadded_box.urdf  simple_box.urdf  unshadded_box.urdf  unshaddedtagged_box.urdf  unshaddedtagged_box2.urdf
jacob_gazebo/: CMakeLists.txt  package.xml
jacob_gazebo/launch/: concept_robot_launch.launch  robot_launch.launch
jacob_gazebo/worlds/: jacob.world
kinova_control/config/: j2n6s300_control.yaml
kinova_control/launch/: kinova_control.launch
kinova_control/src/: move_robot.py
kinova_description/meshes/: Genie_Nano.dae  april_box.dae  shadded_box.dae  simple_box.dae  tagged_box_little.dae  unshadded_box.dae
kinova_description/sdf/: tagged_box.dae
kinova_description/urdf/: j2n6s300.xacro  j2n6s300_standalone.xacro  j2s6s300_standalone.xacro  kinova.gazebo  shadded_box.urdf  tagged_box.urdf  unshadded_box.urdf  unshaddedtagged_box2.urdf
kinova_gazebo/launch/: robot_launch.launch
kinova_joy/: CMakeLists.txt  package.xml
kinova_joy/launch/: kinova_joy.launch
kinova_joy/src/: home_position.cpp  joy_hposition.cpp  joy_interface.cpp
kinova_moveit/kinova_arm_moveit_demo/: CMakeLists.txt
kinova_moveit/kinova_arm_moveit_demo/include/: object_creator.h  planning_group.h
kinova_moveit/kinova_arm_moveit_demo/src/: moveto.cpp  object_creator.cpp  planning_group.cpp  robot_pose.cpp  tag_seek.cpp  teste_joint.cpp
kinova_moveit/robot_configs/j2n6s300_moveit_config/config/: j2n6s300.srdf  joint_limits.yaml  ros_controllers.yaml
kinova_moveit/robot_configs/j2n6s300_moveit_config/launch/: chomp_planning_pipeline.launch.xml  robot_pose.launch  ros_controllers.launch  teste_joint.launch  trajectory_execution.launch.xml
kinova_moveit/robot_configs/j2s6s300_moveit_config/: .setup_assistant  package.xml
kinova_moveit/robot_configs/j2s6s300_moveit_config/config/: j2s6s300.srdf  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
kinova_moveit/robot_configs/j2s6s300_moveit_config/launch/: chomp_planning_pipeline.launch.xml  j2s6s300_gazebo_demo.launch  j2s6s300_moveit_controller_manager.launch.xml  move_group_j2s6s300.launch  planning_context.launch  robot_pose.launch  ros_controllers.launch  sensor_manager.launch.xml
simple_trajectory/: CMakeLists.txt  package.xml
simple_trajectory/script/: inverse_kinematics_jj.py
simple_trajectory/src/: simple_trajectory.cpp
